<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/backgroundColor"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/boxStrokeColor"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- First Horizontal StackView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- Vehicle Number StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Vehicle Number Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/vehicle_number"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Vehicle Number Label -->
                    <TextView
                        android:id="@+id/vehicleNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <!-- Vehicle Type StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Vehicle Type Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/vehicle_type"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Vehicle Type Label -->
                    <TextView
                        android:id="@+id/vehicleType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <!-- OEM StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- OEM Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/fuel_type"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- OEM Label -->
                    <TextView
                        android:id="@+id/fuelType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/green"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <!-- Second Horizontal StackView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- Fleet Manager StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Fleet Manager Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/fuel_quantity"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Fleet Manager Label -->
                    <TextView
                        android:id="@+id/fuelQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <!-- Driver Name StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Driver Name Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/requested_by"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Driver Name Label -->
                    <TextView
                        android:id="@+id/requestedBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <!-- Third Horizontal StackView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- Driver Name StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Driver Name Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/driver_name"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Driver Name Label -->
                    <TextView
                        android:id="@+id/driverName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <!-- Driver Mobile StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Driver Mobile Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/driver_mobile"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Driver Mobile Label -->
                    <TextView
                        android:id="@+id/driverMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <!-- Fourth Horizontal StackView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- Date and Time StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Date and Time Heading Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/date_and_time"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Date and Time Label -->
                    <TextView
                        android:id="@+id/dateTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Company Name Heading Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/company_name"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <!-- Company Name Label -->
                    <TextView
                        android:id="@+id/companyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- Update Icon StackView -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical">

                    <!-- History Button -->
                    <ImageButton
                        android:id="@+id/update_ic"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/todo"
                        android:padding="6dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/edit_tyre" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>